web-infras/parser/tests/fixtures/babel/es2020/dynamic-import/direct-calls-only/output.txt
[SyntaxError]: The only valid meta property for import is import.meta. (2,17)
2|  return import.then();
 |               ^
[SyntaxError]: import.meta may appear only with 'sourceType: "module" (2,10)
2|  return import.then();
 |        ^
